# clawscaffold

./: .gitignore  README.md  pyproject.toml
clawscaffold/: __init__.py  __main__.py  adopt.py  audit.py  backup.py  clawspec_bootstrap.py  clawspec_bridge.py  clawspec_delta.py  clawspec_detect.py  clawspec_gen.py  cli.py  config_apply.py  config_intelligence.py  config_md.py  conflict_detection.py  constants.py  content_loss.py  contract_assertions.py  contract_validator.py  depth_mode.py  docs.py  drift.py  enforcement.py  governance.py  governance_audit.py  graph_validator.py  intent_signals.py  interview.py  loaders.py  manifests.py  merge.py  models.py  notifications.py  orchestrator.py  organization_audit.py  ownership.py  paperclip_export.py  paths.py  pipeline_resume.py  pipeline_state.py  (+15 more)
clawscaffold/adapters/: __init__.py  agents_md_generator.py  catalog_reader.py  cli_runner.py  detection.py  gateway_register.py  hierarchy_reader.py  key_generator.py  paperclip_adapter.py  skill_sync.py  soul_condenser.py  temp_dir_builder.py  yaml_generator.py
clawscaffold/hooks/: __init__.py  governance.py  mcp.py  outbound.py
clawscaffold/scaffold/: __main__.py  auditor.py  cli.py  registry.py  spec_generator.py  spec_parser.py
extensions/clawscaffold/: index.ts  package.json
extensions/scaffold-planner/: index.ts  openclaw.plugin.json
scripts/: install-skills.sh
skills/clawscaffold/: SKILL.md
skills/scaffold-assemble/: SKILL.md
skills/scaffold-extract/: SKILL.md
skills/scaffold-interview-content/: SKILL.md
skills/scaffold-interview-planner/: SKILL.md
(+17 files in other folders)
